Add loop condition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCE_FILES
         parser/value_parser.h
         file_manager.cpp
         file_manager.h
+        file_manager_exceptions.h
         linda_base.h
         linda_communicator.cpp
         linda_communicator.h
